--- a/css/base.css
+++ b/css/base.css
@@ -149,7 +149,7 @@ body{font-family:"Microsoft YaHei","simsun";}
 
 /*foot*/
 .common_foot{overflow:hidden; margin-top:15px; background:url(../img/foot_bg.jpg) repeat-x; padding-top:25px;}
-.common_foot .help_list{width:980px; margin:0 auto; overflow:hidden;}
+.common_foot .help_list{width:980px; margin:0 auto; overflow:hidden; padding-bottom:20px;}
 .common_foot .help_list dl{ display:inline-block; *display:inline; *zoom:1; vertical-align:top; overflow:hidden;}
 .common_foot .help_list dl dt{line-height:30px;}
 .common_foot .help_list dl dd{ line-height:25px;}
@@ -161,6 +161,11 @@ body{font-family:"Microsoft YaHei","simsun";}
 .common_foot .help_list dl.il dd{font-size:20px; color:#fe8107;}
 .common_foot .ab_foot{ overflow:hidden;background:#f0f0f0;}
 .common_foot .aft{width:980px; margin:0 auto; padding:10px 0; border-top:1px dotted #b4b4b4; border-bottom:1px dotted #b4b4b4; overflow:hidden;}
-.common_foot .aft ul li{font-size:14px; font-weight:bold; color:#666;}
-.aft_note
+.common_foot .aft ul li{font-size:14px; font-weight:bold; color:#666; display:inline-block; *display:inline;*zoom:1; margin-right:25px;}
+.common_foot .aft_note{height:46px; width:355px;}
+.common_foot .afb{ width:980px; margin:10px auto;}
+.common_foot .afb .under_line{ text-align:center;}
+.common_foot .afb .under_line li{ display:inline-block; *display:inline; *zoom:1;color:#666;}
+.common_foot .afb .under_line li a{ font-size:13px; color:#666; padding:0 10px;}
+.common_foot .afb p{ font-size:13px; color:#666; text-align:center; line-height:30px;}
 /*foot end*/
